--- a/nikola/data/themes/bootstrap4/assets/css/theme.css
+++ b/nikola/data/themes/bootstrap4/assets/css/theme.css
@@ -230,3 +230,8 @@ pre.code {
 html[dir="rtl"] body {
     text-align: right;
 }
+
+/* Set a minimum logo height to ensure .svg are displayed if there is no brand text (#3493) */
+#logo {
+    min-height: 25px;
+}
